--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -114,12 +114,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install autopep8
 
       - name: 🧪 Validate Functions
         id: validate
         working-directory: functions
         run: |
           echo "🧪 Validation des Cloud Functions..."
+
+          # Formatage Python
+          echo "🎨 Formatage automatique du code Python..."
+          autopep8 --in-place --max-line-length=100 --aggressive main.py
 
           # Compilation Python
           python -m py_compile main.py
@@ -130,7 +135,7 @@ jobs:
           fi
 
           # Linting Python
-          pip install flake8
+          echo "🔍 Linting Python avec flake8..."
           flake8 main.py --max-line-length=100 --ignore=E203,W503 || echo "⚠️ Avertissements de style Python"
 
           echo "valid=true" >> $GITHUB_OUTPUT
