--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -92,11 +92,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install autopep8
 
       - name: 🧪 Comprehensive Function Tests
         working-directory: functions
         run: |
           echo "🧪 Tests complets des Cloud Functions..."
+
+          # Formatage Python
+          echo "🎨 Formatage automatique du code Python..."
+          autopep8 --in-place --max-line-length=100 --aggressive main.py
+
+          # Linting Python
+          echo "🔍 Linting Python avec flake8..."
+          flake8 main.py --max-line-length=100 --ignore=E203,W503
 
           # Tests de validation
           if [ -f "test_validation.py" ]; then
