fix: resolve Firebase authentication errors in CI/CD deployments
🔐 Firebase Authentication Fixes:
- Replace problematic FIREBASE_TOKEN with service account authentication
- Fix 'Failed to authenticate, have you run firebase login?' errors in deployments
- Use GOOGLE_APPLICATION_CREDENTIALS instead of --token flag

🚀 Deployment Workflow Improvements:
- firebase-hosting-merge.yml: Cloud Functions deploy now uses service account
- staging.yml: Both hosting and functions use consistent authentication
- Add proper cleanup of temporary service account files
- Remove dependency on firebase login:ci token generation

🔧 Service Account Implementation:
- Use FIREBASE_SERVICE_ACCOUNT_PORTAIL_JHMH for all Firebase operations
- More secure and stable than CLI tokens
- Works for both hosting and functions deployments
- Eliminates token expiration issues

📚 Documentation Updates:
- Remove FIREBASE_TOKEN references from all guides
- Update GITHUB_SECRETS_CONFIG.md with service account only approach
- Simplify setup instructions (8 secrets instead of 9)
- Update error troubleshooting for authentication issues
- Correct checklist and configuration steps

✅ Benefits:
- Eliminates authentication failures in GitHub Actions
- More secure authentication method
- Removes need for firebase login:ci token management
- Consistent deployment process across staging and production
- Better error handling and cleanup

🎯 Affected Workflows:
- .github/workflows/firebase-hosting-merge.yml (Cloud Functions)
- .github/workflows/staging.yml (Hosting + Functions)
- All deployment steps now use service account authentication

🔄 Migration Impact:
- No action needed if FIREBASE_SERVICE_ACCOUNT_PORTAIL_JHMH is already configured
- FIREBASE_TOKEN secret can be removed from GitHub (no longer used)
- Deployments will be more reliable and secure

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -226,10 +226,21 @@ jobs:
         if: github.event.inputs.deploy_functions != 'false'
         run: |
           echo "🔒 Déploiement des Cloud Functions..."
+
+          # Installation de Firebase CLI
           npm install -g firebase-tools
-          firebase deploy --only functions --project portail-jhmh --token "$FIREBASE_TOKEN"
+
+          # Authentification avec service account
+          echo "$FIREBASE_SERVICE_ACCOUNT" > /tmp/service-account.json
+          export GOOGLE_APPLICATION_CREDENTIALS=/tmp/service-account.json
+
+          # Déploiement des functions
+          firebase deploy --only functions --project portail-jhmh
+
+          # Nettoyage
+          rm -f /tmp/service-account.json
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTAIL_JHMH }}
 
   # 🧪 Tests Post-Déploiement
   post-deployment-tests:
