--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -228,19 +228,29 @@ jobs:
           npm ci
           npm install -g firebase-tools
 
+      - name: 🔐 Setup Firebase Authentication
+        run: |
+          echo "🔐 Configuration de l'authentification Firebase..."
+          echo "$FIREBASE_SERVICE_ACCOUNT" > /tmp/service-account.json
+          export GOOGLE_APPLICATION_CREDENTIALS=/tmp/service-account.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=/tmp/service-account.json" >> $GITHUB_ENV
+        env:
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTAIL_JHMH }}
+
       - name: 🌐 Deploy Hosting to Staging
         run: |
           echo "🌐 Déploiement Hosting vers staging..."
-          firebase deploy --only hosting --project ${{ env.FIREBASE_PROJECT_STAGING }} --token "$FIREBASE_TOKEN"
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          firebase deploy --only hosting --project ${{ env.FIREBASE_PROJECT_STAGING }}
 
       - name: 🔒 Deploy Functions to Staging
         run: |
           echo "🔒 Déploiement Functions vers staging..."
-          firebase deploy --only functions --project ${{ env.FIREBASE_PROJECT_STAGING }} --token "$FIREBASE_TOKEN"
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          firebase deploy --only functions --project ${{ env.FIREBASE_PROJECT_STAGING }}
+
+      - name: 🧹 Cleanup Firebase Auth
+        if: always()
+        run: |
+          rm -f /tmp/service-account.json
 
   # 🧪 Tests d'Intégration Staging
   integration-tests:
