--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -230,6 +230,15 @@ jobs:
           # Installation de Firebase CLI
           npm install -g firebase-tools
 
+          # Configuration de l'environnement Python pour les Cloud Functions
+          cd functions
+          echo "🐍 Configuration de l'environnement Python..."
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          cd ..
+
           # Authentification avec service account
           echo "$FIREBASE_SERVICE_ACCOUNT" > /tmp/service-account.json
           export GOOGLE_APPLICATION_CREDENTIALS=/tmp/service-account.json
@@ -242,6 +251,7 @@ jobs:
             echo "1. APIs Google Cloud manquantes (cloudbuild.googleapis.com, artifactregistry.googleapis.com)"
             echo "2. Permissions insuffisantes du service account"
             echo "3. Quota Google Cloud dépassé"
+            echo "4. Environnement Python mal configuré"
             echo ""
             echo "📖 Guide de résolution :"
             echo "   → Voir docs/FIREBASE_APIS_SETUP.md"
