--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -246,14 +246,40 @@ jobs:
         run: |
           echo "🔒 Déploiement Functions vers staging..."
 
-          # Configuration de l'environnement Python et déploiement
-          cd functions && \
-          echo "🐍 Configuration de l'environnement Python..." && \
-          python3 -m venv venv && \
-          source venv/bin/activate && \
-          pip install --upgrade pip && \
-          pip install -r requirements.txt && \
-          cd .. && \
+          # Configuration robuste de l'environnement Python
+          echo "🐍 Configuration de l'environnement Python..."
+          cd functions
+
+          # Créer l'environnement virtuel
+          python3 -m venv venv
+
+          # Définir les variables d'environnement pour Firebase CLI
+          export VIRTUAL_ENV="$(pwd)/venv"
+          export PATH="$VIRTUAL_ENV/bin:$PATH"
+          export PYTHONPATH="$VIRTUAL_ENV/lib/python3.10/site-packages:$PYTHONPATH"
+
+          # Activer l'environnement virtuel
+          source venv/bin/activate
+
+          # Vérifier que l'environnement est correctement configuré
+          echo "Python path: $(which python)"
+          echo "Pip path: $(which pip)"
+          echo "Virtual env: $VIRTUAL_ENV"
+
+          # Installer les dépendances
+          pip install --upgrade pip
+          pip install -r requirements.txt
+
+          # Vérifier l'installation de Firebase Functions Framework
+          pip show functions-framework || pip install functions-framework
+
+          # Retourner au répertoire racine
+          cd ..
+
+          # Déployer avec les variables d'environnement définies
+          echo "🚀 Déploiement Firebase Functions vers staging..."
+          VIRTUAL_ENV="$(pwd)/functions/venv" \
+          PATH="$(pwd)/functions/venv/bin:$PATH" \
           firebase deploy --only functions --project ${{ env.FIREBASE_PROJECT_STAGING }}
 
       - name: 🧹 Cleanup Firebase Auth
