--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,6 +1,32 @@
-# Python bytecode
-__pycache__/
+# Dependencies
+node_modules/
 
-# Python virtual environment
-venv/
-*.local
+# Compiled JavaScript
+lib/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Firebase
+.firebase/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Environment files
+.env
+.env.local
