--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "type-check": "tsc --noEmit",
     "pre-commit": "lint-staged",
     "prepare": "husky",
-    "deploy:functions": "cd functions && firebase deploy --only functions",
+    "deploy:functions": "cd functions && npm run deploy",
     "deploy:hosting": "firebase deploy --only hosting",
     "deploy:all": "firebase deploy",
     "deploy:staging": "firebase use portail-jhmh-staging && npm run deploy:all && firebase use portail-jhmh",
     "deploy:production": "firebase use portail-jhmh && npm run deploy:all",
-    "test:functions": "cd functions && python3 test_validation.py",
-    "test:functions:watch": "cd functions && python3 -c \"import time; import subprocess; print('🔍 Watching functions...'); subprocess.run(['python3', 'test_validation.py'])\"",
+    "test:functions": "cd functions && npm run test",
+    "test:functions:watch": "cd functions && npm run build:watch",
     "test:build": "npm run build && echo '✅ Build test successful'",
     "test:all": "npm run lint && npm run type-check && npm run test:build && npm run test:functions",
     "validate:pre-deploy": "npm run test:all && echo '🎉 Ready for deployment!'",
@@ -29,11 +29,11 @@
     "validate:functions": "npm run test:functions",
     "clean": "rm -rf .next out node_modules/.cache",
     "clean:all": "npm run clean && rm -rf node_modules && npm install",
-    "clean:functions": "cd functions && rm -rf __pycache__ .pyc",
-    "setup:dev": "npm install && cd functions && pip install -r requirements.txt",
+    "clean:functions": "cd functions && npm run clean",
+    "setup:dev": "npm install && cd functions && npm install",
     "setup:hooks": "husky install && chmod +x .husky/pre-commit",
     "setup:firebase": "firebase login && firebase projects:list",
-    "logs:functions": "firebase functions:log --only before_user_signed_in",
+    "logs:functions": "firebase functions:log",
     "logs:hosting": "firebase hosting:channel:list",
     "logs:all": "npm run logs:functions && npm run logs:hosting",
     "status": "echo '📊 Project Status:' && npm run lint --silent && npm run type-check --silent && echo '✅ All checks passed'",
@@ -117,8 +117,8 @@
     "*.{json,md,yml,yaml}": [
       "prettier --write"
     ],
-    "functions/*.py": [
-      "python3 -m py_compile"
+    "functions/src/*.ts": [
+      "cd functions && npm run build && npm run test"
     ]
   }
 }
