--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,7 +17,6 @@ on:
 
 env:
   NODE_VERSION: '20'
-  PYTHON_VERSION: '3.11'
 
 jobs:
   # 🔍 Vérifications pré-déploiement
@@ -123,7 +122,7 @@ jobs:
             public
           retention-days: 7
 
-  # 🔒 Préparation Cloud Functions
+  # 🔒 Préparation Cloud Functions Node.js
   prepare-functions:
     name: 🔒 Prepare Cloud Functions
     runs-on: ubuntu-latest
@@ -135,38 +134,34 @@ jobs:
       - name: 📥 Checkout Code
         uses: actions/checkout@v4
 
-      - name: 🐍 Setup Python
-        uses: actions/setup-python@v5
+      - name: 📦 Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
 
       - name: 📦 Install Functions Dependencies
         working-directory: functions
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install autopep8
+          echo "📦 Installation des dépendances Node.js Functions..."
+          npm ci
 
       - name: 🧪 Validate Functions
         working-directory: functions
         run: |
-          echo "🧪 Validation des Cloud Functions..."
+          echo "🧪 Validation des Cloud Functions Node.js..."
 
-          # Formatage Python
-          echo "🎨 Formatage automatique du code Python..."
-          autopep8 --in-place --max-line-length=100 --aggressive main.py
+          # Build TypeScript
+          echo "🔨 Build des Cloud Functions..."
+          npm run build
 
-          # Linting Python
-          echo "🔍 Linting Python avec flake8..."
-          flake8 main.py --max-line-length=100 --ignore=E203,W503
+          # Tests
+          echo "🧪 Tests des Cloud Functions..."
+          npm run test
 
-          # Compilation Python
-          python -m py_compile main.py
-
-          # Lancer les tests de validation si disponibles
-          if [ -f "test_validation.py" ]; then
-            python test_validation.py
-          fi
+          # Linting
+          echo "🔍 Linting des Cloud Functions..."
+          npm run lint
 
       - name: 📁 Upload Functions Artifacts
         uses: actions/upload-artifact@v4
@@ -194,11 +189,6 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-
-      - name: 🐍 Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
 
       - name: 📁 Download Build Artifacts
         uses: actions/download-artifact@v4
@@ -306,8 +296,8 @@ jobs:
       - name: 🔒 Health Check - Functions
         run: |
           echo "🔒 Vérification des Cloud Functions..."
-          # Test de la fonction de validation
-          response=$(curl -s -o /dev/null -w "%{http_code}" "https://europe-west1-portail-jhmh.cloudfunctions.net/test_domain_check?email=test@jhmh.com")
+          # Test de la fonction de health check
+          response=$(curl -s -o /dev/null -w "%{http_code}" "https://europe-west1-portail-jhmh.cloudfunctions.net/healthCheck")
           if [ $response = "200" ]; then
             echo "✅ Cloud Functions déployées avec succès"
           else
